fixed letter spacing

--- a/css-structure_custom-properties/css/global.css
+++ b/css-structure_custom-properties/css/global.css
@@ -10,7 +10,7 @@
   --color-granite: #252629;
   --font-family: system-ui;
   --border-radius: 4px;
-  --letter-spacing: 0.025em;
+  --letter-spacing: 0.4px;
 }
 
 body {
